--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -8,13 +8,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: test
-    # 保存したシークレットたちを環境変数に設定
-    env:
-      SECRET_KEY: ${{ secrets.SECRET_KEY }}
-      EC2_USER: ${{ secrets.EC2_USER }}
-      EC2_HOST: ${{ secrets.EC2_HOST }}
-      run: 
-        echo "$SECRET_KEY" > secret_key
-        chmod 600 secret_key
-        ssh -oStrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} -i secret_key "cd ~/pinterest_prince_go_2/ && git pull origin develop"
+    - name: test1
+      env:
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+      run: echo "$SECRET_KEY" > secret_key 
+    - name: test2
+      run: chmod 600 secret_key
+    - name: test3
+      env:
+        EC2_USER: ${{ secrets.EC2_USER }}
+        EC2_HOST: ${{ secrets.EC2_HOST }}
+      run: ssh -oStrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} -i secret_key "cd ~/pinterest_prince_go_2/ && git pull origin develop"
