--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -2,14 +2,13 @@ name: Deploy to EC2
 # masterにpushされた時にjobを実行する
 on:
   push:
-    branches: [ master ]
-
+    branches: [ develop ]
+    
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - name: test
-    # 保存したシークレットたちを環境変数に設定
     env:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
       EC2_USER: ${{ secrets.EC2_USER }}
