--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -7,12 +7,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-    - name: test
     env:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
       EC2_USER: ${{ secrets.EC2_USER }}
-      EC2_HOST: ${{ secrets.EC2_HOST }}
-      run: 
-        sh -c 'echo "$SECRET_KEY" > secret_key; chmod 600 secret_key; ssh -oStrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} -i secret_key "cd ~/pinterest_prince_go_2 && git pull origin master";'
-        
+      EC2_HOST: ${{ secrets.EC2_HOST }} 
+    steps:
+      - id: step1
+        run: echo "$SECRET_KEY" > secret_key
+      - id: step2
+        run: chmod 600 secret_key
+      - id: step3
+        run: ssh -oStrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} -i secret_key "cd ~/pinterest_prince_go_2 && git pull origin master"
