--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -3,6 +3,8 @@ name: Deploy to EC2
 on:
   push:
     branches: [ develop ]
+  pull_request:
+    branches: [ develop ]
     
 jobs:
   build:
@@ -12,7 +14,8 @@ jobs:
       EC2_USER: ${{ secrets.EC2_USER }}
       EC2_HOST: ${{ secrets.EC2_HOST }} 
     steps:
-      - id: step1
+      - uses: actions/checkout@v2
+      - name: step1
         run: echo "$SECRET_KEY" > secret_key
       - id: step2
         run: chmod 600 secret_key
