--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -1,9 +1,11 @@
 
 on:
   push:
-    branches: [ develop ]
+    branches: 
+      - develop
   pull_request:
-    branches: [ develop ]
+    branches: 
+      - develop
     
 jobs:
   build:
@@ -12,11 +14,7 @@ jobs:
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
       EC2_USER: ${{ secrets.EC2_USER }}
       EC2_HOST: ${{ secrets.EC2_HOST }} 
-    steps:
-      - uses: actions/checkout@v2
-      - name: step1
-        run: echo "$SECRET_KEY" > secret_key
-      - id: step2
-        run: chmod 600 secret_key
-      - id: step3
-        run: ssh -oStrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} -i secret_key "cd ~/pinterest_prince_go_2 && git pull origin develop"
+      run: 
+        echo "$SECRET_KEY" > secret_key
+        chmod 600 secret_key
+        ssh -oStrictHostKeyChecking=no ${EC2_USER}@${EC2_HOST} -i secret_key "cd ~/pinterest_prince_go_2 && git pull origin develop"
